# toy

./: .gitignore  .gitmodules  CMakeLists.txt
scripts/: build_el6.sh  build_el6_valgrind.sh  build_el7.sh  build_el7_valgrind.sh  build_el8.sh  build_el8_valgrind.sh
scripts/detail/: build_el6.sh  build_el7.sh  build_el8_valgrind.sh
src/: fmt_custom.h
src/cospawn_anyexc/: CMakeLists.txt  listener.cpp  listener.h  main.cpp
src/cospawn_iocexc/: CMakeLists.txt  listener.cpp  listener.h  session.h  type.h
src/cospawn_sysexc/: CMakeLists.txt  listener.cpp  listener.h  session.cpp
src/cpp17/: CMakeLists.txt  listener.cpp  listener.h
src/cpp20/: CMakeLists.txt  listener.cpp  listener.h  main.cpp  session.cpp  session.h
src/spawn_anyexc/: CMakeLists.txt  listener.cpp  listener.h  session.cpp  session.h
src/spawn_iocexc/: CMakeLists.txt  listener.cpp  listener.h  main.cpp  session.h
src/spawn_sysexc/: CMakeLists.txt  listener.cpp  listener.h  main.cpp  session.cpp  type.h
submodules/: CMakeLists.txt
